view(data):data sudah dinamis,tetapi kurang animasi button download dan animasi searchBar

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           </div>
         </div>
         <div
-          class="most-popular bg-[#1f2128] w-[90%] mt-10 flex flex-col rounded-4xl pt-20 pb-20 pl-3"
+          class="most-popular bg-[#1f2128] w-[90%] mt-10 flex flex-col rounded-4xl py-20 pl-3"
         >
           <div
             class="title block text-center md:flex lg:justify-start lg:flex gap-2 text-4xl font-extrabold"
@@ -154,9 +154,9 @@
             <p class="text-[#EC6090]">right now</p>
           </div>
           <div
-            class="card-wrapper grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 pl-1 pr-2 gap-5 mt-10 leading-4"
+            class="card-wrapper grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 px-1 gap-5 mt-10 leading-4"
           >
-            <div class="card bg-[#2A2B2F] flex flex-col p-6 rounded-2xl">
+            <div class="card bg-[#2A2B2F] flex flex-col p-2 rounded-2xl">
               <img
                 class="aspect-2/3 rounded-4xl object-cover pb-3"
                 src="image/callOfDuty.jfif"
@@ -199,7 +199,7 @@
                 </p>
               </div>
             </div>
-            <div class="card bg-[#2A2B2F] flex flex-col p-6 rounded-2xl">
+            <div class="card bg-[#2A2B2F] flex flex-col p-2 rounded-2xl">
               <img
                 class="aspect-2/3 rounded-4xl object-cover pb-3"
                 src="image/Point Blank Strike.jpg"
@@ -242,7 +242,7 @@
                 </p>
               </div>
             </div>
-            <div class="card bg-[#2A2B2F] flex flex-col p-6 rounded-2xl">
+            <div class="card bg-[#2A2B2F] flex flex-col p-2 rounded-2xl">
               <img
                 class="aspect-2/3 rounded-4xl object-cover pb-3"
                 src="image/delta force.jpg"
@@ -285,7 +285,7 @@
                 </p>
               </div>
             </div>
-            <div class="card bg-[#2A2B2F] flex flex-col p-6 rounded-2xl">
+            <div class="card bg-[#2A2B2F] flex flex-col p-2 rounded-2xl">
               <img
                 class="aspect-2/3 rounded-4xl object-fill pb-3"
                 src="image/nba2k.jfif"
@@ -328,7 +328,7 @@
                 </p>
               </div>
             </div>
-            <div class="card bg-[#2A2B2F] flex flex-col p-6 rounded-2xl">
+            <div class="card bg-[#2A2B2F] flex flex-col p-2 rounded-2xl">
               <img
                 class="aspect-2/3 rounded-4xl object-cover pb-3"
                 src="image/eaFC.jpg"
@@ -371,7 +371,7 @@
                 </p>
               </div>
             </div>
-            <div class="card bg-[#2A2B2F] flex flex-col p-6 rounded-2xl">
+            <div class="card bg-[#2A2B2F] flex flex-col p-2 rounded-2xl">
               <img
                 class="aspect-2/3 rounded-4xl object-cover pb-3"
                 src="image/forzaHorizon.jpg"
@@ -414,7 +414,7 @@
                 </p>
               </div>
             </div>
-            <div class="card bg-[#2A2B2F] flex flex-col p-6 rounded-2xl">
+            <div class="card bg-[#2A2B2F] flex flex-col p-2 rounded-2xl">
               <img
                 class="aspect-2/3 rounded-4xl object-contain pb-3"
                 src="image/rss.jfif"
@@ -457,7 +457,7 @@
                 </p>
               </div>
             </div>
-            <div class="card bg-[#2A2B2F] flex flex-col p-6 rounded-2xl">
+            <div class="card bg-[#2A2B2F] flex flex-col p-2 rounded-2xl">
               <img
                 class="aspect-2/3 rounded-4xl object-cover py-3"
                 src="image/granTourismo.jpg"
@@ -522,7 +522,7 @@
                 >
                   <div class="image">
                     <img
-                      class="w-30 rounded-2xl object-cover shrink-0"
+                      class="w-30 aspect-3/5 rounded-2xl object-cover shrink-0"
                       src="image/Point Blank Strike.jpg"
                       alt=""
                     />
@@ -608,7 +608,7 @@
                 >
                   <div class="image">
                     <img
-                      class="w-30 rounded-2xl object-cover shrink-0"
+                      class="w-30 aspect-3/5 rounded-2xl object-cover shrink-0"
                       src="image/valorant.jpg"
                       alt=""
                     />
@@ -694,7 +694,7 @@
                 >
                   <div class="image">
                     <img
-                      class="w-30 rounded-2xl object-cover shrink-0"
+                      class="w-30 aspect-3/5 rounded-2xl object-cover shrink-0"
                       src="image/eaFC.jpg"
                       alt=""
                     />
@@ -780,7 +780,7 @@
                 >
                   <div class="image">
                     <img
-                      class="w-30 rounded-2xl object-cover shrink-0"
+                      class="w-30 aspect-3/5 rounded-2xl object-cover shrink-0"
                       src="image/granTourismo.jpg"
                       alt=""
                     />
@@ -866,7 +866,7 @@
                 >
                   <div class="image">
                     <img
-                      class="w-30 rounded-2xl object-cover shrink-0"
+                      class="w-30 aspect-3/5 rounded-2xl object-cover shrink-0"
                       src="image/nba2k.jfif"
                       alt=""
                     />
